fix horizontal scroll

--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -23,7 +23,7 @@
 
 @media (min-width: 960px) {
     .cover__title {
-        margin: 0 232px;
+        margin: 0 220px;
     }
 }
 
