--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,23 +1,11 @@
 .header__logo {
-    position: absolute;
-    left: 16px;
-    top: 16px;
     width: 142px;
     height: 42px;
 }
 
 @media (min-width: 640px) {
     .header__logo {
-        left: 24px;
-        top: 28px;
         width: 176px;
         height: 52px;
-    }
-}
-
-@media (min-width: 960px) {
-    .header__logo {
-        left: 48px;
-        top: 28px;
     }
 }
