--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -15,7 +15,7 @@
     }  
 }
 
-@media (min-width: 640px) {
+@media (min-width: 700px) {
     .lead__title {
         line-height: 100px;
         font-size: 96px;
